# aws-gamelift-server-sdk-rs

./: .gitignore  .rustfmt.toml  Cargo.toml  README.adoc  build.rs  clippy.toml
.github/workflows/: ci.yml
examples/: basic.rs  channel.rs
src/: api.rs  aux_proxy_message_sender.rs  connection_state.rs  entity.rs  error.rs  http_client.rs  lib.rs  log_parameters.rs  mapper.rs  network.rs  process_parameters.rs  server_parameters.rs  server_state.rs  web_socket_listener.rs
src/model/: data.rs  message.rs  mod.rs  protocol.rs  request.rs  responce_result.rs
src/protos/: mod.rs  sdk.proto
