[package]
name = "aws-gamelift-server-sdk-rs"
version = "0.1.0"
edition = "2018"
description = "AWS GameLift Server SDK for Rust"
repository = "https://github.com/ZaMaZaN4iK/aws-gamelift-server-sdk-rs"
documentation = "https://docs.rs/aws-gamelift-server-sdk-rs"
readme = "README.adoc"
keywords = ["aws", "gamelift"]
license = "MIT"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
bytes = "1.0.1"
futures-util = { version = "0.3.15", features = ["sink"] }
log = "0.4.14"
protobuf = { version = "2.23.0", features = ["with-serde"] }
reqwest = { version = "0.11.3", default-features = false }
serde = "1.0.126"
serde_json = "1.0.64"
strum = "0.20.0"
strum_macros = "0.20.1"
thiserror = "1.0.24"
tokio = { version = "1.5.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.14.0"

[build-dependencies]
protobuf-codegen-pure = "2.23.0"

[dev-dependencies]
env_logger = "0.8.3"
once_cell = "1.8.0-pre.1"

[profile.release]
opt-level = 3
lto = true
