[package]
name = "aws-gamelift-server-sdk-rs"
version = "0.3.0"
edition = "2021"
description = "AWS GameLift Server SDK for Rust"
repository = "https://github.com/ZaMaZaN4iK/aws-gamelift-server-sdk-rs"
documentation = "https://docs.rs/aws-gamelift-server-sdk-rs"
readme = "README.adoc"
keywords = ["aws", "gamelift"]
license = "MIT"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]
resolver = "2"

[features]
default = ["with-serde"]
with-serde = ["protobuf/with-serde"]

[dependencies]
bytes = "1.1.0"
futures-util = { version = "0.3.19", features = ["sink"] }
log = "0.4.14"
parking_lot = "0.11.2"
protobuf = { version = "2.25.2", features = ["with-serde"] }
reqwest = { version = "0.11.9", default-features = false }
serde = "1.0.133"
serde_json = "1.0.75"
strum = "0.23.0"
strum_macros = "0.23.1"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.16.1"

[build-dependencies]
protobuf-codegen-pure = "2.25.2"

[dev-dependencies]
env_logger = "0.9.0"
once_cell = "1.9.0"

[profile.release]
opt-level = 3
lto = true
