[package]
name = "aws-gamelift-server-sdk-rs"
version = "0.3.0"
edition = "2021"
description = "AWS GameLift Server SDK for Rust"
repository = "https://github.com/ZaMaZaN4iK/aws-gamelift-server-sdk-rs"
documentation = "https://docs.rs/aws-gamelift-server-sdk-rs"
readme = "README.adoc"
keywords = ["aws", "gamelift"]
license = "MIT"
authors = ["Alexander Zaitsev <zamazan4ik@tut.by>"]

[features]
default = []

[dependencies]
futures-util = { version = "0.3.19", features = ["sink"] }
log = "0.4.14"
parking_lot = "0.11.2"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thiserror = "1.0.30"
tokio = { version = "1.24.2", features = ["macros", "time", "rt", "sync"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"] }
uuid = { version = "1.2.2", features = ["v4", "macro-diagnostics"] }

[dev-dependencies]
env_logger = "0.9.0"
aws-config = "0.53.0"
aws-sdk-gamelift = "0.23.0"
tokio = { features = ["full"] }
